TAG: qcreports_db-4-0-2-1
DATE: 05/13/2008
STAFF: lec
CHANGES:
1) Merged TR8747 branch to trunk

TAG: qcreports_db-tr8528-BP
DATE: 04/27/2008
STAFF: sc
CHANGES:
1) branch point tag for TR8528 (B37)

TAG: qcreports_db-tr8747-4
TAG: qcreports_db-tr8747-3
TAG: qcreports_db-tr8747-2
TAG: qcreports_db-tr8747-1
DATE: 05/06/2008
DATE: 04/23/2008
STAFF: lec
CHANGES:
1) changes from strain type to strain attribute:
   PRB_Strain_SingleNoAlleles2.sql
   PRB_StrainTrans.sql
   PRB_StrainF1F2.sql
   PRB_StrainDup.sql
   PRB_Strain_SingleNoAlleles1.sql
   PRB_Strain_MultNoAlleles.sql
   PRB_StrainByDate.sql
2) GXD and Recombinase reports (TR8775)
3) TR 8984, GXD_Images

TAG: qcreports_db-tr8747
DATE: 04/23/2008
STAFF: lec
CHANGES:
1) branch point tag for TR8747 (4.B)

TAG: qcreports_db-4-0-1-1
DATE: 03/21/2008
STAFF: dbm
CHANGES:
1) TR8888 - Remove: MRK_WithAllele_MLC.sql, ALL_AssocPheno.py
2) TR8889 - ALL_Progress.py
3) TR8890 - ALL_ESCellStrain.sql
4) TR8891 - Move to weekly: ALL_MolNotesNoMP.py, ALL_NoMolMutation.py,
            ALL_NoMutantSentence.py, ALL_Priority.py, VOC_MPDups.sql,
            VOC_MPObsolete.sql, VOC_OMIMObsolete.sql

TAG: qcreports_db-4-0-0-2
DATE: 03/05/2008
STAFF: lec
CHANGES:
1) TR8826 - GXD_Images.py

TAG: qcreports_db-4-0-0-1
DATE: 02/27/2008
STAFF: dbm
CHANGES:
1) TR8746 - GXD_DupGenotype.py

TAG: qcreports_db-3-5-4-31
DATE: 02/19/2008
STAFF: lec
CHANGES:
1) TR8786 - PRB_Strain_Standard.sql

TAG: qcreports_db-3-5-4-30
DATE: 02/12/2008
STAFF: lec
CHANGES:
1) TR8774/MRK_NoGO.py, MRK_GOUnknown.py, MRK_GOIEA.py

TAG: qcreports_db-3-5-4-29
DATE: 01/24/2008
STAFF: dbm
CHANGES:
1) Remove 8 reports that are no longer referenced on the QC index page
   (strainAllele.sh, HMD_References3.sql, HMD_References4.sql,
    MLD_Statistics.sql, MRK_MLC_Withdrawn.sql, MLD_Haplotypes.py,
    NOMEN_Pending.py, NOM_BroadcastReserved.py)
2) Copy NOMEN_Pending.sql.rpt to HUGO directory instead of NOMEN_Pending.rpt

TAG: qcreports_db-3-5-4-28
DATE: 01/22/2008
STAFF: lec