@@ -286,6 +286,9 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/MGI_RepSequences.rpt">Markers and their Representative Genomic Sequence ID</A>
 <LI><A HREF="/data/reports/qcreports_db/output/SEQ_NMs.rpt">NM Sequences that are not associated with a MGI Marker</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MGI_GenesAndPseudogenesWithSequence.rpt">Genes & Pseudogenes with at least one Sequence association</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MGI_ENSEMBL_Associations.rpt">Ensembl Associations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MGI_VEGA_Associations.rpt">VEGA Associations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MGI_NCBI_Associations.rpt">NCBI Associations</A>
 </OL>
 
 <A NAME="sequence"><B>Sequences</B></A>
@@ -299,8 +302,10 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_MultMarkerGeneModels.sql.rpt">Ensembl or VEGA Gene Models w/ > 1 Marker Association</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_ENSEMBLnoGeneModel.rpt">Ensembl Genes with no Ensembl Gene Model Association</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_VEGAnoGeneModel.rpt">VEGA Genes with no VEGA Gene Model Association</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NCBInoGeneModel.rpt">NCBI Genes with no NCBI Gene Model Association</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_NoENSEMBL.rpt">Ensembl Gene Models with no Marker Association</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_NoVEGA.rpt">VEGA Gene Models with no Marker Association</A>
+<LI><A HREF="/data/reports/qcreports_db/output/MRK_NoNCBI.rpt">NCBI Gene Models with no Marker Association</A>
 <LI><A HREF="/data/reports/qcreports_db/output/SEQ_RepTransGenomic.rpt">Representative Transcript and Genomic Sequences (bobs)</A>
 </OL>
 
